migration on Gradle: on work - Integration Test don't works