@@ -1,12 +1,15 @@
 plugins {
     id 'java'
-    id 'eclipse'
+    id 'application'
     id 'idea'
     id 'org.springframework.boot' version '2.5.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'org.asciidoctor.convert' version '1.5.8'
-    id 'war'
     id 'org.owasp.dependencycheck' version '6.3.1'
+}
+
+springBoot {
+    mainClassName = 'de.senatov.reservatio.SpringBootAppMain'
 }
 
 group = 'de.senatov'
@@ -15,6 +18,13 @@ description = 'room-reservation'
 sourceCompatibility = '16'
 targetCompatibility = '16'
 
+compileJava {
+    options.incremental = true
+    options.fork = true
+    options.failOnError = false
+    options.compilerArgs += ["--enable-preview"]
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -22,23 +32,10 @@ configurations {
 }
 
 repositories {
-    google()
     mavenLocal()
     mavenCentral()
-            {
-
-                url "http://repo.spring.io/libs-release"
-                url "http://repo.spring.io/libs-milestone"
-                url "http://repo.spring.io/libs-snapshot"
-                url 'https://oss.sonatype.org/content/repositories/snapshots/'
-                url 'https://repo1.maven.org/maven2/'
-                url 'https://jitpack.io'
-                url 'https://repository.primefaces.org/'
-                url 'https://repository.jboss.org/nexus/content/repositories/releases/'
-                url 'https://maven.java.net/content/repositories/snapshots/'
-                url 'https://repo.maven.apache.org/maven2/'
-                url 'https://projectlombok.org/edge-releases'
-            }
+    gradlePluginPortal()
+    maven { url "https://repo.maven.apache.org/maven2" }
 }
 
 
@@ -47,15 +44,15 @@ ext {
 }
 
 dependencies {
-    annotationProcessor 'org.projectlombok:lombok:edge-SNAPSHOT'
-    compileOnly 'org.projectlombok:lombok:edge-SNAPSHOT'
+    annotationProcessor 'org.projectlombok:lombok-maven-plugin:1.18.20.0'
+    compileOnly 'org.projectlombok:lombok-maven-plugin:1.18.20.0'
     ext['slf4j.version'] = '1.7.20'
     implementation "javax.servlet:javax.servlet-api"
     implementation "org.primefaces:primefaces:10.0.0"
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
     implementation 'com.google.guava:guava:30.1.1-jre'
-    implementation 'jakarta.annotation:jakarta.annotation-api:2.0.0'
-    implementation 'jakarta.persistence:jakarta.persistence-api:3.0.0'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation 'javax.persistence:javax.persistence-api:2.2'
     implementation 'javax.enterprise:cdi-api:2.0-PFD2'
     implementation 'javax.inject:javax.inject:1'
     implementation 'javax.persistence:javax.persistence-api:2.2'
@@ -65,7 +62,8 @@ dependencies {
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
     implementation 'org.apiguardian:apiguardian-api:1.1.2'
     implementation 'org.checkerframework:checker-qual:3.18.0'
-    implementation 'org.glassfish:jakarta.faces:4.0.0-M1'
+    implementation 'org.glassfish.hk2.external:javax.inject:2.5.0-b62'
+    implementation 'org.glassfish:javax.faces:2.4.0'
     implementation 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final'
     implementation 'org.hibernate.validator:hibernate-validator-annotation-processor:7.0.1.Final'
     implementation 'org.hibernate.validator:hibernate-validator:7.0.1.Final'
@@ -99,10 +97,8 @@ dependencies {
     implementation platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
     runtimeOnly 'org.postgresql:postgresql'
     runtimeOnly 'org.springframework.boot:spring-boot-devtools'
-    testAnnotationProcessor 'org.projectlombok:lombok:edge-SNAPSHOT'
-    testCompileOnly 'org.projectlombok:lombok:edge-SNAPSHOT'
-    testImplementation "javax.servlet:javax.servlet-api"
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testAnnotationProcessor 'org.projectlombok:lombok-maven-plugin:1.18.20.0'
+    testCompileOnly 'org.projectlombok:lombok-maven-plugin:1.18.20.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-test'
     testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
